--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "cors": "^2.8.5",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "console-stamp": "^0.2.7"
   },
   "engines": {
     "node": "8.x"
